--- a/FavoritesMenu/FavoritesMenu.csproj
+++ b/FavoritesMenu/FavoritesMenu.csproj
@@ -34,6 +34,7 @@
 	<ItemGroup>
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
 		<PackageReference Include="H.NotifyIcon.Wpf" Version="2.0.124" />
+		<PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
 		<PackageReference Include="Microsoft.Windows.CsWin32" Version="0.3.49-beta">
 			<PrivateAssets>all</PrivateAssets>
 		</PackageReference>
